clang/test/BSC/Negative/SafeZone/unsafe_unary_expr/unsafe_unary_expr.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

int main(void) {
  int a = 0;
  int *b = &a;
  safe {
    ++a;          // expected-error {{'++' operator is forbidden in the safe zone}}
    --a;          // expected-error {{'--' operator is forbidden in the safe zone}}
    int c = *b;   // expected-error {{'*' operator is forbidden in the safe zone}}
    // &const、&mut   (waiting complement...)
  }
  return 0;
}